Set possible tls versions in 1.2 and 1.3

--- a/CryptoBlazorApp/appsettings.json
+++ b/CryptoBlazorApp/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Kestrel": {
+    "EndpointDefaults": {
+      "SslProtocols": [
+        "Tls12",
+        "Tls13"
+      ]
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CryptoDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
